--- a/notebooks/line_plot.ipynb
+++ b/notebooks/line_plot.ipynb
@@ -226,10 +226,252 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = transaction_train.groupby('year_month')['price'].sum().to_frame().reset_index()\n",
+    "df.to_csv(\"../data/csv/card2.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>year_month</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2018-09</td>\n",
+       "      <td>17755.639593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-10</td>\n",
+       "      <td>41584.816610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2018-11</td>\n",
+       "      <td>39000.988390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2018-12</td>\n",
+       "      <td>32532.514712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2019-01</td>\n",
+       "      <td>33449.981475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2019-02</td>\n",
+       "      <td>31428.221814</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2019-03</td>\n",
+       "      <td>37549.020169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>2019-04</td>\n",
+       "      <td>42824.987305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>2019-05</td>\n",
+       "      <td>43357.502322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>2019-06</td>\n",
+       "      <td>48648.417864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2019-07</td>\n",
+       "      <td>40387.129373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2019-08</td>\n",
+       "      <td>30545.846729</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>12</td>\n",
+       "      <td>2019-09</td>\n",
+       "      <td>40304.049864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>13</td>\n",
+       "      <td>2019-10</td>\n",
+       "      <td>36987.708593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>14</td>\n",
+       "      <td>2019-11</td>\n",
+       "      <td>38854.420000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>15</td>\n",
+       "      <td>2019-12</td>\n",
+       "      <td>31267.592458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>16</td>\n",
+       "      <td>2020-01</td>\n",
+       "      <td>28793.583492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>17</td>\n",
+       "      <td>2020-02</td>\n",
+       "      <td>28792.876814</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>18</td>\n",
+       "      <td>2020-03</td>\n",
+       "      <td>5859.200373</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Unnamed: 0 year_month         price\n",
+       "0            0    2018-09  17755.639593\n",
+       "1            1    2018-10  41584.816610\n",
+       "2            2    2018-11  39000.988390\n",
+       "3            3    2018-12  32532.514712\n",
+       "4            4    2019-01  33449.981475\n",
+       "5            5    2019-02  31428.221814\n",
+       "6            6    2019-03  37549.020169\n",
+       "7            7    2019-04  42824.987305\n",
+       "8            8    2019-05  43357.502322\n",
+       "9            9    2019-06  48648.417864\n",
+       "10          10    2019-07  40387.129373\n",
+       "11          11    2019-08  30545.846729\n",
+       "12          12    2019-09  40304.049864\n",
+       "13          13    2019-10  36987.708593\n",
+       "14          14    2019-11  38854.420000\n",
+       "15          15    2019-12  31267.592458\n",
+       "16          16    2020-01  28793.583492\n",
+       "17          17    2020-02  28792.876814\n",
+       "18          18    2020-03   5859.200373"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"../data/csv/card2.csv\",sep=',')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "649924.4979491514"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['price'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = transaction_train\n",
+    "piedf=df1.groupby(['year_month','sales_channel_id'])['sales_channel_id'].count().to_frame()\n",
+    "piedf.rename(columns={'sales_channel_id':'count'}, inplace=True)\n",
+    "piedf.reset_index(inplace=True)\n",
+    "#piedf = piedf.groupby('sales_channel_id')['count'].sum().to_frame()\n",
+    "piedf.to_csv(\"../data/csv/pie_plot_home.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "period[M]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = pd.read_csv(\"../data/csv/pie_plot_home.csv\")\n",
+    "df1['year_month'] = pd.to_datetime(df1['year_month']).dt.to_period('M')\n",
+    "df1['year_month'].dtype"
+   ]
   },
   {
    "cell_type": "code",
