--- a/notebooks/ensayo.ipynb
+++ b/notebooks/ensayo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "0    Underwear body  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "9    Baby/Children    Greenish Khaki    901"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,6 +227,160 @@
     "group_categories_colors = group_categories_colors.rename(columns={'colour_group_name':'count'})\n",
     "group_categories_colors = group_categories_colors.reset_index()\n",
     "group_categories_colors.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>mes</th>\n",
+       "      <th>año</th>\n",
+       "      <th>index_group_name</th>\n",
+       "      <th>cantidad</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Baby/Children</td>\n",
+       "      <td>93336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Divided</td>\n",
+       "      <td>290913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Ladieswear</td>\n",
+       "      <td>756378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Menswear</td>\n",
+       "      <td>56582</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Sport</td>\n",
+       "      <td>66262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>120</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Baby/Children</td>\n",
+       "      <td>33567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>121</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Divided</td>\n",
+       "      <td>223286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>122</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Ladieswear</td>\n",
+       "      <td>733324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>123</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Menswear</td>\n",
+       "      <td>90365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>124</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Sport</td>\n",
+       "      <td>37773</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>125 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0  mes   año index_group_name  cantidad\n",
+       "0             0    1  2019    Baby/Children     93336\n",
+       "1             1    1  2019          Divided    290913\n",
+       "2             2    1  2019       Ladieswear    756378\n",
+       "3             3    1  2019         Menswear     56582\n",
+       "4             4    1  2019            Sport     66262\n",
+       "..          ...  ...   ...              ...       ...\n",
+       "120         120   12  2019    Baby/Children     33567\n",
+       "121         121   12  2019          Divided    223286\n",
+       "122         122   12  2019       Ladieswear    733324\n",
+       "123         123   12  2019         Menswear     90365\n",
+       "124         124   12  2019            Sport     37773\n",
+       "\n",
+       "[125 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../data/csv/piechart.csv')\n",
+    "df"
    ]
   }
  ],
